Fixed triangle spacing

--- a/src/client/components/landingPage/index.css
+++ b/src/client/components/landingPage/index.css
@@ -84,7 +84,7 @@
 .teal-triangle2 {
   position: relative;
   top: -115rem;
-  left: 43.6rem;
+  left: 44rem;
   width: 100rem;
   height: 60rem;
   clip-path: polygon(100% 0, 100% 71%, 0 28%);
